<resources>
    <string name="app_name">To Do List</string>
    <string name="action_settings">Settings</string>
    <string name="addtask">Add</string>
    <string name="title_activity_add_task">New Task</string>
    <string name="add_task_button_add">Add</string>
    <string name="add_task_button_cancel">Cancel</string>
    <string name="add_task_title_label">Title:</string>
    <string name="add_task_desc_label">Description:</string>
    <string name="add_task_date_label">Due Date:</string>
    <string name="add_task_details_label">Details:</string>
    <string name="add_task_error_toast">Title and valid date are required</string>
    <string name="no_details_message">(no details provided for this item)</string>
    <string name="action_sortDate">Sort by Due Date</string>
    <string name="action_sortTitle">Sort by Title</string>
    <string name="action_sortCreated">Sort by Created</string>

    <item name="request_code_addtask" type="id"/>
</resources>
