<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/addTask_activity_horizontal_margin"
                android:paddingRight="@dimen/addTask_activity_horizontal_margin"
                android:paddingTop="@dimen/addTask_activity_vertical_margin"
                android:paddingBottom="@dimen/addTask_activity_vertical_margin"
                tools:context="com.rjokela.todolist.AddTaskActivityFragment">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_task_title_label"
            android:id="@+id/addTask_titleLabel"
            android:layout_column="0"
            android:gravity="center_vertical|right"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addTask_title"
            android:layout_column="1"
            />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_task_desc_label"
            android:id="@+id/addTask_descLabel"
            android:layout_column="0"
            android:gravity="center_vertical|right"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addTask_desc"
            android:layout_column="1"
            />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_task_date_label"
            android:id="@+id/addTask_dateLabel"
            android:layout_column="0"
            android:gravity="center_vertical|right"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/addTask_date"
            android:layout_column="1"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_task_details_label"
            android:id="@+id/addTask_detailsLabel"
            android:layout_column="0"
            android:gravity="center_vertical|right"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/addTask_details"
            android:layout_column="1"
            />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_task_button_cancel"
            android:id="@+id/addTask_buttonCancel"
            android:layout_column="0"
            android:layout_weight="1"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_task_button_add"
            android:id="@+id/addTask_buttonAdd"
            android:layout_column="1"
            android:layout_weight="1"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"/>
    </TableRow>
</TableLayout>
